--- a/templates/base.html
+++ b/templates/base.html
@@ -137,11 +137,11 @@
             margin-left: 0;
         }
 
-        /* Desktop Layout */
+        /* Desktop Layout - UPDATED: Reduced gap to 0.5cm (19px) */
         @media (min-width: 992px) {
             .main-content {
-                margin-left: 250px; /* Sidebar width */
-                width: calc(100% - 250px);
+                margin-left: 231px; /* Sidebar width (250px) - gap (19px) */
+                width: calc(100% - 231px);
             }
         }
 
